--- a/toyproject/pom.xml
+++ b/toyproject/pom.xml
@@ -46,5 +46,10 @@
        <artifactId>poi-ooxml</artifactId>
        <version>4.1.1</version>
    </dependency>
+   <dependency>
+       <groupId>com.google.maps</groupId>
+       <artifactId>google-maps-services</artifactId>
+       <version>0.18.0</version>
+   </dependency>
 </dependencies>
 </project>
